@@ -3,21 +3,19 @@ package com.gtocore.common.machine.multiblock.electric.space;
 import com.gtocore.common.saved.DysonSphereSavaedData;
 
 import com.gtolib.api.machine.multiblock.ElectricMultiblockMachine;
-import com.gtolib.api.recipe.Recipe;
-import com.gtolib.api.recipe.modifier.RecipeModifierFunction;
 import com.gtolib.utils.MachineUtils;
 
 import com.gregtechceu.gtceu.api.blockentity.MetaMachineBlockEntity;
-import com.gregtechceu.gtceu.api.capability.recipe.FluidRecipeCapability;
-import com.gregtechceu.gtceu.api.recipe.content.Content;
-import com.gregtechceu.gtceu.api.recipe.content.ContentModifier;
+import com.gregtechceu.gtceu.api.recipe.GTRecipe;
+import com.gregtechceu.gtceu.api.recipe.handler.RecipeHandlerUnit;
+import com.gregtechceu.gtceu.api.recipe.modifier.RecipeModifier;
 
 import net.minecraft.core.BlockPos;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceKey;
 import net.minecraft.world.level.Level;
 
-import com.lowdragmc.lowdraglib.syncdata.annotation.Persisted;
+import com.gto.datasynclib.annotations.SaveToDisk;
 import earth.terrarium.adastra.api.planets.PlanetApi;
 import org.jetbrains.annotations.NotNull;
 
@@ -28,7 +26,7 @@ public final class SpaceProbeSurfaceReceptionMachine extends ElectricMultiblockM
 
     private ResourceKey<Level> dimension;
 
-    @Persisted
+    @SaveToDisk
     private boolean use;
 
     public SpaceProbeSurfaceReceptionMachine(MetaMachineBlockEntity holder) {
@@ -41,9 +39,9 @@ public final class SpaceProbeSurfaceReceptionMachine extends ElectricMultiblockM
     }
 
     @Override
-    protected boolean beforeWorking(@NotNull Recipe recipe) {
+    public void beforeWorking(@NotNull RecipeHandlerUnit unit, @NotNull GTRecipe recipe) {
         if (use) DysonSphereSavaedData.setDysonUse(getDimension(), true);
-        return super.beforeWorking(recipe);
+        super.beforeWorking(unit, recipe);
     }
 
     @Override
@@ -65,16 +63,16 @@ public final class SpaceProbeSurfaceReceptionMachine extends ElectricMultiblockM
     }
 
     @Override
-    protected Recipe getRealRecipe(@NotNull Recipe recipe) {
+    public GTRecipe getRealRecipe(@NotNull RecipeHandlerUnit unit, @NotNull GTRecipe recipe) {
         if (!PlanetApi.API.isSpace(getLevel())) return null;
-        recipe = RecipeModifierFunction.perfectOverclocking(this, recipe);
+        recipe = RecipeModifier.perfectOverclocking(this, unit, recipe);
         if (recipe == null) return null;
         if (!DysonSphereSavaedData.getDimensionUse(getDimension())) {
             double number = (double) DysonSphereSavaedData.getDimensionData(getDimension()).leftInt() / 100;
             if (number > 1) {
                 use = true;
-                Content content = recipe.outputs.get(FluidRecipeCapability.CAP).get(0);
-                recipe.outputs.put(FluidRecipeCapability.CAP, List.of(content.copy(FluidRecipeCapability.CAP, ContentModifier.multiplier(number))));
+                var content = recipe.fluidOutputs.getFirst();
+                recipe.fluidOutputs = List.of(content.copy((long) number));
                 return recipe;
             }
         }
@@ -82,8 +80,8 @@ public final class SpaceProbeSurfaceReceptionMachine extends ElectricMultiblockM
     }
 
     @Override
-    public boolean onWorking() {
-        if (super.onWorking()) {
+    public boolean handleTickRecipe(GTRecipe recipe) {
+        if (super.handleTickRecipe(recipe)) {
             Level level = getLevel();
             if (level == null) return false;
             if (getOffsetTimer() % 20 == 0) {
